# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  builtin.c  builtin_main.c  engine_start.c  ft_list_sort.c  ft_memcmp.c  get_envar.c  get_path.c  minishell  minishell.h  oldbuttgold.c  parse_tests.txt  pipets.c  redirect.c  roma.c  test.sh  y  z
builtin/: builtin.c  builtin_utils.c  ft_cd.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_pwd.c  ft_unset.c  other_cmd.c  refresh.c
engine/: engine_start.c  exec.c  gnl_minishell.c  process.c
get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c  get_next_line_utils_2.c
gnl/: get_next_line.c  get_next_line.h  get_next_line_utils.c
includes/: builtin_mshell.h  engine_mshell.h  get_next_line.h  minishell.h  parse_mshell.h  structs_mshell.h  utils_mshell.h
libft/: Makefile  ft_dlstadd_back.c  ft_dlstiter.c  ft_dlstlast.c  ft_dlstnew.c  ft_free2d.c  ft_list_sort.c  ft_list_sort_utils.c  ft_lstdelmid.c  ft_lstnew_kv.c  ft_my_lstadd_back.c  ft_my_lstiter.c  ft_my_lstlast.c  ft_my_lstnew.c  ft_realloc.c  ft_strdup.c  ft_strlen.c  libft.h
parser/: alloc_pipe_list.c  alloc_token_list.c  check_syntax.c  check_syntax2.c  check_tokens_syntax.c  get_sh_list.c  handle_dollar.c  open_quotes.c  open_quotes2.c  open_quotes_utils.c  parse.c  parse_env.c  split_by_char.c  split_by_commands.c  split_by_commands_utils.c  split_by_quotes.c  split_by_semicolons.c  states.c
test/: file.txt
utils/: alloc_and_check.c  alloc_and_check2.c  check_numeric.c  chr_join.c  compare_kv.c  count_2d_lines.c  delete2nodes.c  dlst_pipe.c  dlst_sh.c  exit_error_message.c  free_all_lists.c  free_and_null.c  ft_alloc_check.c  ft_atoll.c  ft_atoull.c  ft_bell.c  ft_lstnew_kv.c  ft_trim_2d.c  get_envar.c  handle_cmd1.c  handle_cmd2.c  handle_cmd3.c  is_str.c  print_2d_array.c  print_error.c  print_everything.c  print_token.c  process_cmd1.c  process_cmd2.c  reset_newlines.c  set_heads.c  set_states.c  signal.c  states.c  states_first_lvl.c  status.c  token.c  utils_mshell.h
